add task 1,2,3 in dz_4

--- a/DZ_html_4/task2.html
+++ b/DZ_html_4/task2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>task1</title>
-    <link rel="stylesheet" type="text/css" href="task1.css">
+    <title>task2</title>
+    <link rel="stylesheet" type="text/css" href="task2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Economica:wght@700&display=swap" rel="stylesheet">
@@ -31,6 +31,9 @@
             </li>
             <li class="menu__item">
                 <a class="menu__link" href="#">TRAVELS</a>
+            </li>
+            <li class="menu__item menu__item_float">
+                <a class="menu__link" href="#">MORE</a>
             </li>
         </ul>
     </nav>
