add task1 in dz_html_7

--- a/DZ_html_6/task2.html
+++ b/DZ_html_6/task2.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>task2</title>
-        <meta charset="UTF=8"/>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" type="text/css" href="task2.css">
         <link href="./trebuchetms.ttf" rel="stylesheet">
     </head>
