--- a/DZ_html_6/task1.html
+++ b/DZ_html_6/task1.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>task1</title>
-        <meta charset="UTF=8"/>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" type="text/css" href="task1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
