mod task1,task2...

--- a/DZ_html_8/task1.html
+++ b/DZ_html_8/task1.html
@@ -11,11 +11,15 @@
             <form class="search-string__form"  action="task1.html">
                 <div class="form__shell-search">
                     <input class="form__placeholder" type="text" placeholder="Найти...">
-                    <input class="form__input" type="submit" value="Найти">
+                    <button class="form__button">
+                        Найти
+                    </button>
                 </div>
                 <div class="form__shell-selection">
-                    <input class="form__checkbox" type="checkbox">
-                    <p class="form__checkbox--name">поиск по описаниям сайтов</p>
+                    <input class="form__checkbox" id="checkbox" type="checkbox">
+                    <label class="form__label" for="checkbox">
+                        поиск по описаниям сайтов
+                    </label>
                 </div>
             </form>
         </div>
