--- a/DZ_html_8/task2.html
+++ b/DZ_html_8/task2.html
@@ -11,11 +11,18 @@
             <form class="search-string__form"  action="task2.html">
                 <div class="form__shell-search">
                     <input class="form__placeholder" type="text" placeholder="Найти...">
-                    <input class="form__input" type="submit" value="Найти">
+                    <button class="form__button">
+                        Найти
+                    </button>
                 </div>
                 <div class="form__shell-selection">
-                    <p class="form__example">Например,</p>
-                    <a class="form__link-example" href="#">советник</a>
+                    <p class="form__example">
+                        Например,
+                        <a class="form__link" href="#">
+                            советник
+                        </a>
+                    </p>
+                    
                 </div>
             </form>
         </div>
